forked by arcayi, including platform-gd32, ArduinoCore-GD32 and these examples

--- a/gd32-arduino-analog-read/platformio.ini
+++ b/gd32-arduino-analog-read/platformio.ini
@@ -9,9 +9,9 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env]
-platform = https://github.com/CommunityGD32Cores/platform-gd32.git
+platform = https://github.com/arcayi/platform-gd32.git
 platform_packages = 
-    framework-arduinogd32@https://github.com/CommunityGD32Cores/ArduinoCore-GD32.git
+    framework-arduinogd32@https://github.com/arcayi/ArduinoCore-GD32.git
 monitor_speed = 115200
 lib_deps =
     adafruit/Adafruit SSD1306 @ ^2.4.6
@@ -33,5 +33,9 @@ framework = arduino
 [env:gd32e503c_start]
 board = gd32e503c_start
 framework = arduino
+
+[env:genericGD32E230C8]
+framework = arduino
+board = genericGD32E230C8
 
 ;debug_tool = stlink
