--- a/gd32-arduino-i2c-scanner/platformio.ini
+++ b/gd32-arduino-i2c-scanner/platformio.ini
@@ -10,8 +10,7 @@
 
 [env]
 platform = https://github.com/CommunityGD32Cores/platform-gd32.git
-platform_packages = 
-    framework-arduinogd32@https://github.com/CommunityGD32Cores/ArduinoCore-GD32.git
+platform_packages = framework-arduinogd32@https://github.com/CommunityGD32Cores/ArduinoCore-GD32.git
 monitor_speed = 115200
 
 [env:gd32f307_mbed]
@@ -26,4 +25,6 @@ framework = arduino
 board = genericGD32F303CC
 framework = arduino
 
-;debug_tool = stlink
+[env:genericGD32E230C8]
+board = genericGD32E230C8
+framework = arduino
